* [Storybook] Fixed horizontal overflow of CodeBlock component

--- a/storybook/stories/About/About.stories.scss
+++ b/storybook/stories/About/About.stories.scss
@@ -57,6 +57,7 @@ main {
   padding: 1rem;
   background-color: #f6f8fa;
   border-radius: 0.4rem;
+  overflow-x: auto;
 }
 
 /* Primary button */
